securing PUT route for blogs
